# building_instincts

./: .gitignore  install.sh  launch_evo_clients.sh
evoClient_plugin/: .cproject  .project  CMakeLists.txt
evoClient_plugin/src/: EvoClientPluginTools.cpp  EvoClientPluginTools.h  simExtEVO2.cpp  simExtEVO2.h
evo_master/: Evo_Master.py  Evo_Project.py  Evo_Tools.py  Evo_Visualize.py  params.mnp
evo_master/projects/project_template/: project_template.cfg
